--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
   <groupId>org.sonatype.nexus.ci</groupId>
   <artifactId>nexus-jenkins-plugin</artifactId>
-  <version>3.17.600</version>
+  <version>3.17.601-SNAPSHOT</version>
   <packaging>hpi</packaging>
 
   <repositories>
@@ -54,7 +54,7 @@
     <connection>scm:git:ssh://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>nexus-jenkins-plugin-3.17.600</tag>
+    <tag>HEAD</tag>
   </scm>
   <distributionManagement>
     <repository>
