--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,10 @@
           <artifactId>xstream</artifactId>
           <groupId>com.thoughtworks.xstream</groupId>
         </exclusion>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <!--
